--- a/6/styles/styles.css
+++ b/6/styles/styles.css
@@ -7,6 +7,19 @@ Summary:
 */
 
 /*
+- Пиксельперфект - углы инпутов
+  - в каталоге в полей стоимости углы круглые не все!
+- Переполнение
+  - использовать минимальную и максимальную высоту вместо просто высоты
+- Фокус
+  - табом с клавиатуры я должна пройти по всем элементам страницы
+- Гриды
+- сделать состояния
+- появление модального окна
+- дописать range-элемент
+*/
+
+/*
 6.18. Микросетки на флексах для всех страниц (https://up.htmlacademy.ru/htmlcss/35/tasks/11, 17 октября)
 
 + Стики футер: min-height, height для <html> и <body>
@@ -290,9 +303,13 @@ input {
 }
 .main-nav .search-button,
 .main-nav .favorite {
-  height: 36px;
+  /* height: 36px; */
+  height: 100%;
   width: 44px;
-  padding: 0 12px;
+  /* width: 100%; */
+  /* padding: 0 12px; */
+  padding: 0;
+  position: relative;
 
   display: flex;
   align-items: center;
@@ -310,6 +327,23 @@ input {
 }
 .main-nav .favorite::before {
   background: url("../images/icons-common.svg") -80px 0 no-repeat;
+}
+.main-nav .favorite::after {
+  content: "12";
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 11px;
+  right: 4px;
+
+  border-radius: 50%;
+  background-color: var(--color-icon-text);
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .main-nav-right .book {
   width: 160px;
@@ -338,6 +372,9 @@ input {
   font-size: 40px;
   line-height: 40px;
   text-transform: uppercase;
+}
+.main-footer .logo-htmlacademy {
+  height: 35px;
 }
 
 /*subscribe*/
@@ -688,12 +725,17 @@ input {
   color: var(--color-input-label);
 
   background-color: var(--color-form-element-2);
-  border-radius: 4px;
+}
+.price-range label:first-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.price-range label:last-child {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 .price-range input {
   flex-grow: 1;
-  /* padding-left: 20px; */
-  /* height: 100%; */
   box-sizing: border-box;
 
   /*font*/
