настроено управление фокусом

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,12 +7,13 @@ Summary:
 */
 
 /*
-- Пиксельперфект - углы инпутов
-  - в каталоге в полей стоимости углы круглые не все!
++ Пиксельперфект - углы инпутов
+  + в каталоге в полей стоимости углы круглые не все!
++ Фокус
+  + табом с клавиатуры я должна пройти по всем элементам страницы
+- поставить корректные адреса всех ссылок
 - Переполнение
-  - использовать минимальную и максимальную высоту вместо просто высоты
-- Фокус
-  - табом с клавиатуры я должна пройти по всем элементам страницы
+    - использовать минимальную и максимальную высоту вместо просто высоты
 - Гриды
 - сделать состояния
 - появление модального окна
