поставила корректные адреса в ссылках

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@ Summary:
   + в каталоге в полей стоимости углы круглые не все!
 + Фокус
   + табом с клавиатуры я должна пройти по всем элементам страницы
-- поставить корректные адреса всех ссылок
++ поставить корректные адреса всех ссылок
 - Переполнение
     - использовать минимальную и максимальную высоту вместо просто высоты
 - Гриды
