--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,10 @@ Summary:
     - использовать минимальную и максимальную высоту вместо просто высоты
 - Гриды
 - сделать состояния
-- появление модального окна
++ появление модального окна
 - дописать range-элемент
++ outline при фокусе НЕ УБИРАТЬ!
++ количество уведомлений из псевдоэлемента перенести в верстку
 */
 
 /*
@@ -329,8 +331,7 @@ input {
 .main-nav .favorite::before {
   background: url("../images/icons-common.svg") -80px 0 no-repeat;
 }
-.main-nav .favorite::after {
-  content: "12";
+.main-nav .favorite .notifications {
   height: 20px;
   width: 20px;
   position: absolute;
@@ -367,6 +368,16 @@ input {
   width: 142px;
   display: flex;
   justify-content: space-around;
+}
+.social a svg {
+  fill: var(--color-icon-second);
+}
+.social a:hover svg,
+.social a:focus svg {
+  fill: var(--color-icon-second-hover);
+}
+.social a:active svg {
+  fill: var(--color-icon-second-active);
 }
 .main-footer .phone {
   color: var(--color-text-basic);
@@ -977,16 +988,33 @@ input {
 
 /*modal-window*/
 .modal-window {
+  display: none;
+}
+.modal-window.visible {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-window form {
   width: 717px;
-  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
-  border-radius: 30px;
+  height: min-content;
   padding: 64px 70px;
   box-sizing: border-box;
   position: relative;
-}
-.modal-window form {
+
   display: flex;
   flex-direction: column;
+
+  background-color: white;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
 }
 .modal-window h2 {
   margin: 0 0 64px;
