--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,7 @@ Summary:
     - использовать минимальную и максимальную высоту вместо просто высоты
     - flex-wrap
 - Гриды
++ изменить padding у select-элемента: скрывает часть текста
 - сделать состояния
   + главная страница
     + кнопка "поиск гостиницы в седоне"
@@ -24,12 +25,12 @@ Summary:
       - кнопка "примерить"
       - кнопка "сбросить"
     - карточки
-      - select сортировки
-      - отображение карточек
+      + select сортировки
+      + форма отображения карточек
       - кнопка "подробнее"
       - кнопка "в избранное"
       - кнопка "в избранном"
-      - пагинация
+      + пагинация
     + кнопка "подписаться"
   - модальное окно
     - кнопка "закрыть"
@@ -889,7 +890,7 @@ input {
   height: 49px;
   width: 292px;
   margin-right: 62px;
-  padding: 14px 20px;
+  padding: 0 20px;
 
   font-family: "PTSans", Arial, Helvetica, sans-serif;
   font-weight: 400;
@@ -902,6 +903,20 @@ input {
   -webkit-appearance: none;
   background: url("../images/icons-common-select.svg") right 14px center
     no-repeat;
+  outline: none;
+}
+.view-order:hover,
+.view-order:focus {
+  border-color: var(--color-button-second-hover);
+}
+.view-order:active {
+  border-color: var(--color-form-input);
+}
+.view-order:disabled {
+  /*чтобы стрелочку фона тоже можно было стилизовать:*/
+  border-color: var(--color-icon-basic);
+  color: var(--color-text-basic);
+  opacity: 30%;
 }
 /*view-format*/
 .view-format {
@@ -920,6 +935,15 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  outline: none;
+}
+.view-format button:focus {
+  border-color: var(--color-icon-second-hover);
+}
+.view-format button:hover,
+.view-format button:active {
+  border-color: var(--color-icon-basic);
 }
 .view-format button::before {
   content: "";
@@ -935,7 +959,8 @@ input {
 .view-format .list::before {
   background: url("../images/icons-state.svg") 0 0 no-repeat;
 }
-.view-format .active {
+.view-format .active,
+.view-format .active:focus {
   border-color: var(--color-icon-basic);
 }
 
@@ -1046,10 +1071,20 @@ input {
   font-size: 20px;
   line-height: 36px;
 }
+.pagination button:hover,
+.pagination button:focus {
+  background-color: var(--color-button-second-hover);
+}
+.pagination button:active {
+  background-color: var(--color-button-second);
+  color: var(--color-text-background-small);
+}
 .pagination button:first-child {
   margin-left: 0;
 }
-.pagination .current {
+.pagination .current,
+.pagination .current:hover,
+.pagination .current:active {
   color: var(--color-text-basic);
   background-color: var(--color-form-element-2);
 }
@@ -1059,6 +1094,11 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.pagination .collapsed:hover,
+.pagination .collapsed:active {
+  color: var(--color-text-basic);
+  background-color: inherit;
 }
 
 /*modal-window*/
