--- a/6/styles/styles.css
+++ b/6/styles/styles.css
@@ -7,16 +7,41 @@ Summary:
 */
 
 /*
-- Пиксельперфект - углы инпутов
-  - в каталоге в полей стоимости углы круглые не все!
 - Переполнение
-  - использовать минимальную и максимальную высоту вместо просто высоты
-- Фокус
-  - табом с клавиатуры я должна пройти по всем элементам страницы
+    - использовать минимальную и максимальную высоту вместо просто высоты
+    - flex-wrap
 - Гриды
++ изменить padding у select-элемента: скрывает часть текста
 - сделать состояния
-- появление модального окна
+  + главная страница
+    + кнопка "поиск гостиницы в седоне"
+    + кнопка "подписаться"
+  - каталог
+    - фильтр
+      - хлебные крошки
+      - radio, checkbox
+      - input - number
+      - бегунки range-элемента
+      - кнопка "примерить"
+      - кнопка "сбросить"
+    - карточки
+      + select сортировки
+      + форма отображения карточек
+      - кнопка "подробнее"
+      - кнопка "в избранное"
+      - кнопка "в избранном"
+      + пагинация
+    + кнопка "подписаться"
+  - модальное окно
+    - кнопка "закрыть"
+    - поля даты
+    - валидация
+    - кнопки "добавить", "убавить"
+    - tooltip про детей
+    - кнопка "найти"
+- расположить элементы модального окна
 - дописать range-элемент
++ outline при фокусе НЕ УБИРАТЬ!
 */
 
 /*
@@ -263,6 +288,7 @@ input {
   left: 70px;
   top: 0;
 }
+/*ссылки на разделы сайта*/
 .main-nav-left {
   margin-left: 168px;
 
@@ -286,7 +312,7 @@ input {
   line-height: 24px;
   text-transform: capitalize;
 }
-.main-nav-left a::after {
+.main-nav-left a:hover::after {
   /*можно сделать через бордер, но поскольку выделение может стать другим, сделала через псевдоэлемент*/
   content: "";
   position: absolute;
@@ -296,6 +322,7 @@ input {
   height: 2px;
   background-color: #756257;
 }
+/*кнопки*/
 .main-nav-right {
   display: flex;
   height: 100%;
@@ -303,11 +330,8 @@ input {
 }
 .main-nav .search-button,
 .main-nav .favorite {
-  /* height: 36px; */
   height: 100%;
   width: 44px;
-  /* width: 100%; */
-  /* padding: 0 12px; */
   padding: 0;
   position: relative;
 
@@ -328,8 +352,7 @@ input {
 .main-nav .favorite::before {
   background: url("../images/icons-common.svg") -80px 0 no-repeat;
 }
-.main-nav .favorite::after {
-  content: "12";
+.main-nav .favorite .notifications {
   height: 20px;
   width: 20px;
   position: absolute;
@@ -345,9 +368,22 @@ input {
   justify-content: center;
   align-items: center;
 }
+/*кнопка "хочу сюда"*/
 .main-nav-right .book {
   width: 160px;
   margin-left: 20px;
+}
+.main-nav-right .book:hover,
+.main-nav-right .book:focus {
+  background-color: var(--color-button-basic-hover);
+}
+.main-nav-right .book:active {
+  background-color: var(--color-button-basic);
+  color: var(--color-text-background-small);
+}
+.main-nav-right .book:disabled {
+  background-color: var(--color-button-disabled);
+  color: var(--color-text-background-default);
 }
 
 /*main footer*/
@@ -362,19 +398,47 @@ input {
   padding: 40px 70px 30px;
   box-sizing: border-box;
 }
-.main-footer .social {
+/*social*/
+.social {
   width: 142px;
   display: flex;
   justify-content: space-around;
 }
+.social a svg {
+  fill: var(--color-icon-second);
+}
+.social a:hover svg,
+.social a:focus svg {
+  fill: var(--color-icon-second-hover);
+}
+.social a:active svg {
+  fill: var(--color-icon-second-active);
+}
+/*phone*/
 .main-footer .phone {
   color: var(--color-text-basic);
   font-size: 40px;
   line-height: 40px;
   text-transform: uppercase;
 }
+.main-footer .phone:hover,
+.main-footer .phone:focus {
+  color: var(--color-text-hover);
+}
+.main-footer .phone:active {
+  color: var(--color-text-active);
+}
+/*logo html-academy*/
 .main-footer .logo-htmlacademy {
   height: 35px;
+  fill: var(--color-icon-basic);
+}
+.main-footer .logo-htmlacademy:hover,
+.main-footer .logo-htmlacademy:focus {
+  fill: var(--color-icon-hover);
+}
+.main-footer .logo-htmlacademy:active {
+  fill: var(--color-icon-active);
 }
 
 /*subscribe*/
@@ -431,6 +495,18 @@ input {
   border-bottom-left-radius: 0;
   font-size: 20px;
   line-height: 36px;
+}
+.subscribe button:hover,
+.subscribe button:focus {
+  background-color: var(--color-button-second-hover);
+}
+.subscribe button:active {
+  background-color: var(--color-button-second);
+  color: var(--color-text-background-small);
+}
+.subscribe button:disabled {
+  background-color: var(--color-button-disabled);
+  color: var(--color-text-background-default);
 }
 
 /*hero*/
@@ -591,6 +667,18 @@ input {
   /*font*/
   font-size: 20px;
   line-height: 36px;
+}
+.search button:hover,
+.search button:focus {
+  background-color: var(--color-button-basic-hover);
+}
+.search button:active {
+  background-color: var(--color-button-basic);
+  color: var(--color-text-background-small);
+}
+.search button:disabled {
+  background-color: var(--color-button-disabled);
+  color: var(--color-text-background-default);
 }
 
 /*filter*/
@@ -802,7 +890,7 @@ input {
   height: 49px;
   width: 292px;
   margin-right: 62px;
-  padding: 14px 20px;
+  padding: 0 20px;
 
   font-family: "PTSans", Arial, Helvetica, sans-serif;
   font-weight: 400;
@@ -815,6 +903,20 @@ input {
   -webkit-appearance: none;
   background: url("../images/icons-common-select.svg") right 14px center
     no-repeat;
+  outline: none;
+}
+.view-order:hover,
+.view-order:focus {
+  border-color: var(--color-button-second-hover);
+}
+.view-order:active {
+  border-color: var(--color-form-input);
+}
+.view-order:disabled {
+  /*чтобы стрелочку фона тоже можно было стилизовать:*/
+  border-color: var(--color-icon-basic);
+  color: var(--color-text-basic);
+  opacity: 30%;
 }
 /*view-format*/
 .view-format {
@@ -833,6 +935,15 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  outline: none;
+}
+.view-format button:focus {
+  border-color: var(--color-icon-second-hover);
+}
+.view-format button:hover,
+.view-format button:active {
+  border-color: var(--color-icon-basic);
 }
 .view-format button::before {
   content: "";
@@ -848,7 +959,8 @@ input {
 .view-format .list::before {
   background: url("../images/icons-state.svg") 0 0 no-repeat;
 }
-.view-format .active {
+.view-format .active,
+.view-format .active:focus {
   border-color: var(--color-icon-basic);
 }
 
@@ -959,10 +1071,20 @@ input {
   font-size: 20px;
   line-height: 36px;
 }
+.pagination button:hover,
+.pagination button:focus {
+  background-color: var(--color-button-second-hover);
+}
+.pagination button:active {
+  background-color: var(--color-button-second);
+  color: var(--color-text-background-small);
+}
 .pagination button:first-child {
   margin-left: 0;
 }
-.pagination .current {
+.pagination .current,
+.pagination .current:hover,
+.pagination .current:active {
   color: var(--color-text-basic);
   background-color: var(--color-form-element-2);
 }
@@ -973,19 +1095,41 @@ input {
   justify-content: center;
   align-items: center;
 }
+.pagination .collapsed:hover,
+.pagination .collapsed:active {
+  color: var(--color-text-basic);
+  background-color: inherit;
+}
 
 /*modal-window*/
 .modal-window {
+  display: none;
+}
+.modal-window.visible {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modal-window form {
   width: 717px;
-  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
-  border-radius: 30px;
+  height: min-content;
   padding: 64px 70px;
   box-sizing: border-box;
   position: relative;
-}
-.modal-window form {
+
   display: flex;
   flex-direction: column;
+
+  background-color: white;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
 }
 .modal-window h2 {
   margin: 0 0 64px;
