--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,8 +15,8 @@ Summary:
 - сделать состояния
   - каталог
     + хлебные крошки
-    - radio, checkbox
-    - input - number
+    + radio, checkbox
+    + input - number
     - бегунки range-элемента
     + кнопка "примерить"
     + кнопка "сбросить"
@@ -773,16 +773,6 @@ input {
   font-size: 18px;
   line-height: 23px;
 }
-.filter .infrastructure,
-.filter .housing-type {
-  width: 150px;
-  margin-right: 70px;
-}
-.infrastructure label,
-.housing-type label {
-  display: flex;
-  align-items: center;
-}
 .filter input[type="checkbox"] {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -794,6 +784,7 @@ input {
   margin-right: 16px;
 
   border-radius: 4px;
+  /* border: none; */
   background: white;
 }
 .filter input[type="checkbox"]:checked {
@@ -810,10 +801,43 @@ input {
   margin-right: 16px;
 
   border-radius: 50%;
+  /* border: none; */
   background: white;
 }
 .filter input[type="radio"]:checked {
   background: url("../images/icons-tick.svg") 0 0 no-repeat, white;
+}
+.filter input[type="checkbox"]:focus-visible,
+.filter input[type="radio"]:focus-visible {
+  outline: 3px solid #83b3d3;
+}
+@supports not selector(:focus-visible) {
+  .filter input[type="checkbox"]:focus,
+  .filter input[type="radio"]:focus {
+    outline: 3px solid #83b3d3;
+  }
+}
+.filter label:not(:focus) input[type="checkbox"]:active,
+.filter label:not(:focus) input[type="radio"]:active {
+  opacity: 30%;
+}
+.infrastructure,
+.housing-type {
+  width: 150px;
+  margin-right: 70px;
+}
+.infrastructure label,
+.housing-type label {
+  display: flex;
+  align-items: center;
+}
+.infrastructure label:hover,
+.housing-type label:hover {
+  opacity: 60%;
+}
+.infrastructure label:active,
+.housing-type label:active {
+  opacity: 30%;
 }
 .price-range {
   width: 288px;
@@ -838,17 +862,29 @@ input {
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  color: var(--color-input-label);
 
+  /*color*/
+  color: var(--color-input-label);
   background-color: var(--color-form-element-2);
 }
-.price-range label:first-child {
+.price-range .price-from {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-.price-range label:last-child {
+.price-range .price-to {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
+}
+.price-range label:hover {
+  background-color: var(--color-form-element-2-hover);
+}
+.price-range label:focus-within {
+  background-color: var(--color-form-element-2-hover);
+  outline: 3px solid #83b3d3;
+}
+.price-range label:active {
+  background-color: var(--color-form-element-2);
+  outline: 2px solid #000000;
 }
 .price-range input {
   flex-grow: 1;
@@ -858,7 +894,7 @@ input {
   font-weight: 700;
   border: none;
   outline: none;
-  background-color: var(--color-form-element-2);
+  background-color: inherit;
 }
 /* Chrome, Safari, Edge, Opera */
 .price-range input::-webkit-outer-spin-button,
