--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,12 +21,12 @@ Summary:
     + кнопка "примерить"
     + кнопка "сбросить"
   - модальное окно
-    - кнопка "закрыть"
-    - поля даты
+    + кнопка "закрыть"
+    + поля даты
     - валидация
-    - кнопки "добавить", "убавить"
+    + кнопки "добавить", "убавить"
     - tooltip про детей
-    - кнопка "найти"
+    + кнопка "найти"
 - расположить элементы модального окна
 - дописать range-элемент
 + outline при фокусе НЕ УБИРАТЬ!
@@ -488,12 +488,12 @@ input {
 }
 .subscribe input:focus-visible {
   background-color: var(--color-form-element-2-hover);
-  outline: 3px solid #83b3d3;
+  outline: 3px solid var(--color-icon-second);
 }
 @supports not selector(:focus-visible) {
   .subscribe input:focus {
     background-color: var(--color-form-element-2-hover);
-    outline: 3px solid #83b3d3;
+    outline: 3px solid var(--color-icon-second);
   }
 }
 .subscribe input:active {
@@ -809,12 +809,12 @@ input {
 }
 .filter input[type="checkbox"]:focus-visible,
 .filter input[type="radio"]:focus-visible {
-  outline: 3px solid #83b3d3;
+  outline: 3px solid var(--color-icon-second);
 }
 @supports not selector(:focus-visible) {
   .filter input[type="checkbox"]:focus,
   .filter input[type="radio"]:focus {
-    outline: 3px solid #83b3d3;
+    outline: 3px solid var(--color-icon-second);
   }
 }
 .filter label:not(:focus) input[type="checkbox"]:active,
@@ -880,7 +880,7 @@ input {
 }
 .price-range label:focus-within {
   background-color: var(--color-form-element-2-hover);
-  outline: 3px solid #83b3d3;
+  outline: 3px solid var(--color-icon-second);
 }
 .price-range label:active {
   background-color: var(--color-form-element-2);
@@ -1238,18 +1238,22 @@ input {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
 
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.modal-window .overlay {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 .modal-window form {
   width: 717px;
   height: min-content;
   padding: 64px 70px;
   box-sizing: border-box;
-  position: relative;
+  position: absolute;
 
   display: flex;
   flex-direction: column;
@@ -1261,6 +1265,8 @@ input {
 .modal-window h2 {
   margin: 0 0 64px;
 }
+
+/*кнопка закрытия формы*/
 .modal-window .close-modal-window {
   position: absolute;
   top: 64px;
@@ -1280,6 +1286,27 @@ input {
   height: 20px;
   background: url("../images/icons-common.svg") -140px 0 no-repeat;
 }
+.modal-window .close-modal-window:hover {
+  background: var(--color-form-element-2-hover);
+}
+.modal-window .close-modal-window:focus-visible {
+  outline: 3px solid var(--color-icon-second);
+  background: var(--color-form-element-2-hover);
+}
+@supports not selector(:focus-visible) {
+  .modal-window .close-modal-window:focus {
+    outline: 3px solid var(--color-icon-second);
+    background: var(--color-form-element-2-hover);
+  }
+}
+.modal-window .close-modal-window:active {
+  background: var(--color-form-element-2-hover);
+}
+.modal-window .close-modal-window:active::after {
+  opacity: 0.3;
+}
+
+/*поля ввода*/
 .modal-window h3 {
   /*font*/
   color: var(--color-text-basic);
@@ -1287,25 +1314,175 @@ input {
   font-size: 20px;
   line-height: 24px;
   text-transform: capitalize;
+  margin: 0 0 0 0;
 }
-.modal-window button {
-  font-size: 20px;
-  line-height: 24px;
+.modal-window fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
 }
-.modal-window input {
+.modal-window input::placeholder {
+  color: var(--color-text-basic);
+  opacity: 60%;
+}
+
+/*поля даты*/
+/*в рамках данного курса не буду кастомизировать элемент,
+оставлю теневой dom без изменений*/
+.modal-window input[type="date"] {
+  height: 48px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+
+  background-color: var(--color-form-element-2);
+  border: none;
+  -webkit-datetime-edit-text: ".";
+}
+.modal-window input[type="date"]::-webkit-calendar-picker-indicator {
+  width: 20px;
+  height: 20px;
+  box-sizing: border-box;
+  background: url("../images/icons-common.svg") -100px 0 no-repeat;
+}
+.modal-window input[type="date"]:hover {
+  background-color: var(--color-form-element-2-hover);
+}
+.modal-window input[type="date"]:focus-visible {
+  background-color: var(--color-form-element-2-hover);
+  outline: 3px solid #83b3d3;
+}
+@supports not selector(:focus-visible) {
+  .modal-window input[type="date"]:focus {
+    background-color: var(--color-form-element-2-hover);
+    outline: 3px solid #83b3d3;
+  }
+}
+.modal-window input[type="date"]:active {
+  background-color: var(--color-form-element-2);
+  outline: 2px solid #000000;
+}
+
+/*поля количества человек*/
+.modal-window .input-group {
+  height: 48px;
+  width: 100%;
+  /* width: 111px; */
+  padding: 14px 10px;
+  box-sizing: border-box;
+  display: flex;
+
+  background-color: var(--color-form-element-2);
+  color: var(--color-text-basic);
+  border-radius: 4px;
+}
+.modal-window .input-group:hover {
+  background-color: var(--color-form-element-2-hover);
+}
+.modal-window .input-group input {
+  flex-grow: 1;
+  text-align: center;
   font-weight: 700;
+  background-color: inherit;
+  border: none;
+  margin: 0 10px;
 }
-.modal-window span {
+/* Chrome, Safari, Edge, Opera */
+.modal-window .input-group input::-webkit-outer-spin-button,
+.modal-window .input-group input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+/* Firefox */
+.modal-window .input-group input[type="number"] {
+  -moz-appearance: textfield;
+}
+.modal-window .input-group input:focus,
+.modal-window .input-group input:active {
+  outline: none;
+}
+
+/*кнопки "-" и "+"*/
+.modal-window .minus,
+.modal-window .plus {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  background-color: inherit;
+}
+.modal-window .minus svg,
+.modal-window .plus svg {
+  fill: var(--color-text-active);
+}
+.modal-window .minus:hover svg,
+.modal-window .plus:hover svg {
+  fill: var(--color-text-basic);
+}
+.modal-window .minus:focus-visible,
+.modal-window .plus:focus-visible {
+  fill: var(--color-text-basic);
+  outline: 3px solid var(--color-icon-second);
+}
+@supports not selector(:focus-visible) {
+  .modal-window .minus:focus,
+  .modal-window .plus:focus {
+    fill: var(--color-text-basic);
+    outline: 3px solid var(--color-icon-second);
+  }
+}
+.modal-window .minus:active svg,
+.modal-window .plus:active svg {
+  fill: var(--color-text-basic);
+  fill-opacity: 0.2;
+}
+
+/*валидация полей и подсказки*/
+.modal-window .verification {
+  font-size: 16px;
+  line-height: 21px;
+  color: #ff5757;
+}
+.modal-window .error {
   font-size: 16px;
   line-height: 21px;
 }
-span.error {
-  color: #ff5757;
+.modal-window .info {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url("../images/icons-common.svg") -220px 0 no-repeat,
+    var(--color-icon-second);
+  border-radius: 50%;
 }
 .tooltip {
+  display: none;
+  position: absolute;
+  padding: 15px 18px 18px 22px;
+  width: 256px;
+
+  background: var(--color-text-second);
+  border-radius: 10px;
+  color: var(--color-text-background-default);
   font-size: 16px;
   line-height: 20px;
 }
+.modal-window .info:hover + .tooltip,
+.modal-window .info:focus-visible + .tooltip {
+  display: block;
+}
+
+/*кнопка "найти"*/
 .find-modal-window {
   height: 60px;
+  border-radius: 10px;
+
+  font-size: 20px;
+  line-height: 24px;
+  background-color: var(--color-icon-second);
+}
+.find-modal-window:hover,
+.find-modal-window:focus {
+  background-color: var(--color-button-second-hover);
+}
+.find-modal-window:active {
+  color: var(--color-text-background-active);
 }
